# Mimerme

./: Cargo.toml  FUCK  fuck  map_sort.bam  map_sort.bam.bai  mapping.bam  mapping_sorted.bam  mapping_sorted.bam.bai  nCov-2019.fai  out.sam  owo.sam  reads.test.fa  reads.test.fa.backup  reads.test2.fa  ref_index  test123.sam  yay  yeet  yeet.sam
src/: main.rs
