[package]
name = "fmmap"
version = "0.1.0"
authors = ["Andros Yang <androssdragonq.9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
bincode = "1.2.1"
rust-htslib = { version = "*", default-features = false }